# Advent2022

./: CMakeLists.txt  README.md  main.cpp  settings.gradle.kts
days/day1/: Day1.cpp  Day1.h
days/day2/: Day2.cpp  Day2.h
days/day3/: Day3.cpp  Day3.h
days/day4/: Day4.cpp  Day4.h
days/day5/: Day5.cpp  Day5.h
days/day6/: Day6.cpp  Day6.h
days/day7/: Day7.cpp  Day7.h
lib/base/: Day.cpp  Day.h
lib/input/: Input.cpp  Input.h
